--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+language: ruby
+rvm:
+  - 2.1.0
 addons:
   code_climate:
     repo_token: 592faac5ebe08b408c4182929dcfe6e802ece98cbfc51e87615a3adbf027759d
