--- a/test/fixtures/admins.yml
+++ b/test/fixtures/admins.yml
@@ -1,9 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: one@example.net
-  password_digest: <%= BCrypt::Password.create('secret', cost: 4) %>
-
-two:
-  email: two@example.net
+  email: admin.one@example.net
   password_digest: <%= BCrypt::Password.create('secret', cost: 4) %>
