--- a/test/fixtures/composite_name_entities.yml
+++ b/test/fixtures/composite_name_entities.yml
@@ -1,5 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: admin.one@example.net
+  email: composite_name_entity.one@example.net
   password_digest: <%= BCrypt::Password.create('secret', cost: 4) %>
