Update tests & CI configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: ruby
 rvm:
-- 2.1.0
-- 2.1.7
-- 2.3.0
+  - 2.3.1
+  - 2.2.5
+gemfile:
+  - gemfiles/rails_4.gemfile
+  - gemfiles/rails_5.gemfile
+after_install:
+  - bundle exec rake db:test:prepare
 addons:
   code_climate:
     repo_token: 61c3ea804322306871a6b7e06a0a6435672cd29aea0c2b286e6b837234ba9d90
