--- a/test/fixtures/admins.yml
+++ b/test/fixtures/admins.yml
@@ -2,4 +2,4 @@
 
 one:
   email: admin.one@example.net
-  password_digest: <%= ::BCrypt::Password.create('secret', cost: 4) %>
+  password_digest: <%= BCrypt::Password.create('secret', cost: 4) %>
