--- a/test/fixtures/composite_name_entities.yml
+++ b/test/fixtures/composite_name_entities.yml
@@ -2,4 +2,4 @@
 
 one:
   email: composite_name_entity.one@example.net
-  password_digest: <%= ::BCrypt::Password.create('secret', cost: 4) %>
+  password_digest: <%= BCrypt::Password.create('secret', cost: 4) %>
